<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_your"
        android:textColor="@color/coffee_brown"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@color/coffee_brown"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/age"
        android:textColor="@color/light_brown"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/in_minutes"
        android:textColor="@color/coffee_brown"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@color/pakistan_green"
        android:text="@string/select_date"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/selected_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/date"
        android:textColor="@color/coffee_brown"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/selected_date"
        android:textColor="@color/green"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/counted_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/number_minutes"
        android:textColor="@color/coffee_brown"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/minutes"
        android:textColor="@color/green"
        android:textSize="28sp"
        android:textStyle="bold" />

</LinearLayout>